--- a/visualizer_styles.css
+++ b/visualizer_styles.css
@@ -1,8 +1,12 @@
-#counter_debug{
+#counter_debug, #infinite_counter_debug{
 	font-size: 500%;
 	float:left;
 	position:fixed;
 	display:inline;
+}
+
+#infinite_counter_debug{
+	top:60px;
 }
 
 #example {
@@ -97,10 +101,24 @@
 		left:55%;
 	}
 
+	.cross_rectangle{
+		position:absolute;
+		visibility:visible;
+		width:100%;
+		height:5%;
+		background-color:black;
+	}
+	.cr_left{
+		left:-100%;
+	}
+	.cr_right{
+		left:100%;
+	}
+
 
 #soundcloud_attribution_container{
 	position:absolute;
-	top:100px;
+	top:160px;
 	color:black;
 }
 	
