added function to load any images beforehand.  also added function changeImage to modify images z-index values in order to show or hide them.  this reduces the beat lag that we had when the changeImage function swapped out the image urls from the #image element

--- a/visualizer_styles.css
+++ b/visualizer_styles.css
@@ -45,11 +45,17 @@
     position:relative; /*just so that visualizer_space is the containing block for absolutely positioned child elements*/
 }
 
-	#image{
+	.visual_image{
 		width:100%;
 	    height:100%;
 	    display: block;
+	    position:absolute;
 	    -webkit-filter:invert(0%); /*need this so the JS invert_change_color() function works initially*/
+	    z-index: -1;
+	}
+
+	#image{
+		z-index: 0; /*set this to be visible image to start*/	
 	}
 
 	.rectangle{
