--- a/visualizer_styles.css
+++ b/visualizer_styles.css
@@ -9,22 +9,22 @@
 	top:60px;
 }
 
-#example {
+#frequency_visualizer_test {
     width: 100%;
 }
 
-#example .showIfNoApi {
+#frequency_visualizer_test .showIfNoApi {
     display: none;
 }
 
-#example #visualisation {
+#frequency_visualizer_test #visualisation {
     height: 255px;
     position: relative;
     margin: 10px;
     -webkit-box-reflect: below 3px -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255,255,255,0.2)));
 }
 
-#example #visualisation > div {
+#frequency_visualizer_test #visualisation > div {
     width: 2.5%;
     background-color:blue;
     display: inline-block;
@@ -116,6 +116,8 @@
 
 	#search_results_space{
 		text-align: left;
+		position:fixed;
+		z-index: 2;
 	}
 
 	#search_results_list{
@@ -125,6 +127,7 @@
 	.search_result{
 		cursor: pointer; 
 		cursor: hand;
+		background-color: white;
 	}
 
 	.search_result:hover{
